tests/NormalTests/paczka1/fuzzy1/85174911.err
Error in line 3: wGIUQWOhyrJ A216 35,9
Error in line 1: tOBsYV6X45 S708 79,2
Error in line 5: wGIUQWOhyrJ S708 61,2
Error in line 20: wGIUQWOhyrJ S708 84,0
Error in line 27: tOBsYV6X45 S657 73,9
Error in line 26: wGIUQWOhyrJ S657 75,4
Error in line 34: wGIUQWOhyrJ A216 55,4
Error in line 38: wGIUQWOhyrJ A216 85,0
